assets/css/companies-banner.css
.companies-banner-container {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  background-color: var(--purple);
  vertical-align: auto;
  padding-top: var(--lgPadding);
  padding-bottom: var(--lgPadding);
}

.companies-title-section h3,
p {
  text-align: center;
  color: var(--heroText);
}

.company-container {
  max-width: var(--maxWidth);
}

.company-title {
  color: var(--lightBlue);
  font-size: clamp(var(--mdHeading), calc(5vw + 0.5em), var(--lgHeading));
  font-weight: 700;
}

.company-title-description {
  font-size: var(--mdText);
  margin-top: var(--lgMargin);
}

@media (min-width: 768px) {
  .company-title-description {
    margin-top: var(--smMargin);
  }
}

.company-logo-section {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-top: var(--lgMargin);
}

.company-logo {
  width: clamp(14vmin, 10vw, 17vmin);
  height: 100%;
}

/* Making the logos responsive  */
.company-logo + .company-logo {
  margin-left: 3vw;
}

/* For the facebook logo */
.company-logo:nth-child(3) {
  margin-bottom: 2vmin;
}

